--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
 eureka:
   instance:
     hostname: localhost
+    preferIpAddress: true
   # standalone mode
   client:
     registerWithEureka: false
